# BrickEngine

./: .gitignore  .gitmodules  CMakeLists.txt  COMMUNICATIE.MD  Main.cpp  README.md
.github/: pull_request_template.md
.github/workflows/: main.yml
include/brickengine/: CMakeLists.txt  collision_detector.hpp  collision_detector_2.hpp  collision_return_values.hpp  engine.hpp  engine_input.hpp  entity_factory.hpp  game_state_manager.hpp  input.hpp  input_keycode.hpp  input_keycodes.hpp  resource_manager.hpp
include/brickengine/components/: animation_component.hpp  click_component.hpp  component.hpp  component_impl.hpp  health_component.hpp  physics_component.hpp  player_component.hpp  renderable_component.hpp  renderablecomponent.hpp  transform_component.hpp
include/brickengine/components/colliders/: rectangle_collider_component.hpp
include/brickengine/components/collision/: circle_collision_component.hpp  collision_component.hpp  square_collision_component.hpp
include/brickengine/components/data/: position.hpp  scale.hpp
include/brickengine/components/enums/: collision_detection_type.hpp  kinematic.hpp
include/brickengine/components/renderables/: texture_component.hpp
include/brickengine/entities/: entity_factory.hpp  entity_manager.cpp  entity_manager.hpp  entity_with_component.hpp
include/brickengine/entities/exceptions/: child_already_has_parent_exception.hpp  component_not_found.hpp  entity_id_not_found.hpp  entity_not_found.hpp  grandparents_not_supported.hpp
include/brickengine/enum/: axis.hpp  direction.hpp
include/brickengine/exceptions/: not_implemented_exception.hpp  reset_on_set_state_not_set.hpp  state_systems_not_set.hpp
include/brickengine/input/: input.hpp  player_input.hpp
include/brickengine/json/: json.hpp
include/brickengine/json/exceptions/: noPathException.hpp  noValidJsonOrPathException.hpp  no_path_exception.hpp  no_valid_json_or_path_exception.hpp  objectOrTypeException.hpp  object_or_type_exception.hpp
include/brickengine/json_parser/: json.hpp  json_parser.hpp
include/brickengine/json_parser/exceptions/: objectOrTypeException.hpp
include/brickengine/rendering/: image.hpp  renderable.hpp  renderable_factory.hpp  renderer.hpp
include/brickengine/rendering/renderables/: animation.hpp  circle.hpp  clone_renderable.hpp  color.hpp  image.hpp  line.hpp  rect.hpp  renderable.hpp  texture.hpp
include/brickengine/rendering/renderables/data/: color.hpp
include/brickengine/scenes/: scene.hpp  scene_impl.hpp  scene_manager.hpp  scene_reset_state.hpp
include/brickengine/scenes/data/: entity_components.hpp
include/brickengine/scenes/enums/: scene_layer.hpp
include/brickengine/scenes/exceptions/: another_scene_active.hpp  no_scene_active.hpp
include/brickengine/sound/: sound_manager.hpp
include/brickengine/std/: floating_point_comparer.hpp  random.hpp  sign.hpp
include/brickengine/systems/: animation_system.hpp  click_system.hpp  collision_system.hpp  displacement_system.hpp  physics_system.hpp  rendering_system.hpp  system.hpp
lib/: BrickEngine.hpp  CMakeLists.txt  collision_detector.cpp  collision_detector_2.cpp  engine.cpp  engine.hpp  entity_factory.cpp  resource_manager.cpp
lib/components/: animation_component.cpp  click_component.cpp  component.cpp  physics_component.cpp  player_component.cpp  transform_component.cpp
lib/components/colliders/: rectangle_collider_component.cpp
lib/components/renderables/: texture_component.cpp
lib/entities/: entity_manager.cpp  entity_with_component.cpp
lib/input/: input.cpp
lib/json/: json.cpp
lib/json_parser/: json.cpp  json_parser.cpp
lib/rendering/: image.cpp  image.hpp  renderable_factory.cpp  renderer.cpp
lib/rendering/renderables/: animation.cpp  circle.cpp  clone_renderable.cpp  line.cpp  renderable.cpp  texture.cpp
lib/scenes/: scene_manager.cpp
lib/sound/: sound_manager.cpp
lib/std/: random.cpp
lib/systems/: animation_system.cpp  click_system.cpp  collision_system.cpp  displacement_system.cpp  physics_system.cpp  rendering_system.cpp
tests/: CMakeLists.txt  int_test.cpp  json_test.cpp
tests/assets/: test.json
tests/entities/: entity_manager_parent_child_test.cpp  entity_manager_test.cpp
